# text-wrench

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: text_wrench.ftl
res/: com.broken-d.TextWrench.desktop  com.broken-d.TextWrench.metainfo.xml  com.mangledbits.TextWrench.desktop  com.mangledbits.TextWrench.metainfo.xml  com.mangledbits.TextWrench.yml
src/: app.rs  main.rs
src/operations/: hex.rs  mod.rs  none.rs  text.rs  text_operation.rs  text_operations.rs  web.rs
