[package]
name = "text-wrench"
version = "0.1.0"
edition = "2021"

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
rust-embed = "8.3.0"

# Deps for text operations
base64 = "0.22.1"
urlencoding = "2.1.3"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["debug", "winit", "wgpu", "tokio", "xdg-portal"]
# features = ["wayland", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
